<resources>
    <string name="app_name">Chatting App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="whatsapp">WhatsApp</string>
    <string name="profile">Profile Info</string>
    <string name="profile_info">Provide your name and optional profile photo</string>
    <string name="agree">AGREE AND CONTINUE</string>
    <string name="info">Read our privacy policy.Tap "Agree and Continue" to accept the Terms of Service</string>
    <string name="whatsapp_welcome">Welcome to WhatsApp</string>
    <string name="otp">Enter OTP</string>
    <string name="enter_name">Enter your name</string>
    <string name="info_verify"> You must be atleast 16 years ilod to register.Learn how Whatsapp works withFacebook companies</string>
    <string name="enter_otp">Enter the otp number to verify</string>
    <string name="enter_num">Enter your phone number</string>
    <string name="verify_number">Enter your phone number</string>
    <string name="send_otp">Whatsapp send OTP to verify your number </string>
    <string name="welcome">Welcome Back!!</string>
    <string name="loginToContinue">Login to continue</string>
    <string name="email">Email</string>
    <string name="forward_to">Forward to..</string>
    <string name="frequent">Frequently contacted</string>
    <string name="recent">Recent chats</string>
    <string name="no_views">No views yet</string>
    <string name="viewed_by">viewed by 0</string>
    <string name="name">Name</string>
    <string name="forward">Forward</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="add_image">Add Image</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="camera">Camera</string>
    <string name="search">Search</string>
    <string name="status">Status</string>
    <string name="my_status">My status</string>
    <string name="update">Recent updates</string>
    <string name="update_viewed">Viewed updates</string>
    <string name="tap">Tap to add status update</string>
    <string name="image">Image</string>
    <string name="last_seen">last seen today at</string>
    <string name="message">Message</string>
    <string name="time">3.15pm</string>
    <string name="createNewAccount">Create New Account</string>
    <string name="signin">SIGN IN</string>
    <string name="signin_small">Sign In</string>
    <string name="signup">SIGN UP</string>
    <string name="settings">Settings</string>
    <string name="select_contacts">Select contact</string>
    <string name="contacts_tb">50 contacts</string>
    <string name="group">New group</string>
    <string name="contact">New contact</string>
    <string name="hint_text">Search name or number</string>
    <string name="floating_button">floating button</string>
    <string name="contacts"> Contacts on Whatsapp</string>
    <string name="community">New community</string>
</resources>