<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sdp"
    android:scrollbars="none"
    android:clipToPadding="false"
    android:overScrollMode="never"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">






    <TextView
        android:id="@+id/tv_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createNewAccount"
        android:textColor="@color/black"
        android:textSize="@dimen/_19ssp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_20sdp"/>

    <FrameLayout
        android:id="@+id/fl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_new_account"
        android:layout_marginTop="@dimen/_20sdp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/roundedImageView"
            android:layout_width="@dimen/_85sdp"
            android:layout_height="@dimen/_85sdp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_image_bgnd"
            app:riv_oval="true"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_image"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            android:textStyle="normal"/>



    </FrameLayout>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl"
            android:inputType="text"
            android:background="@drawable/et_bgnd"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:layout_marginTop="@dimen/_40sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/black"/>


    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_bgnd"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:inputType="textPassword"
        android:background="@drawable/et_bgnd"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:inputType="textPassword"
        android:background="@drawable/et_bgnd"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:hint="@string/confirmPassword"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/black"/>

        <FrameLayout
            android:id="@+id/fl_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_confirm_password">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/signup"
                app:cornerRadius="@dimen/_8sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>


        </FrameLayout>



    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_small"
        android:textStyle="bold"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_two"
        android:layout_marginTop="@dimen/_15sdp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>