<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="3dp"
    tools:context=".fragments.VerifyNumberFragment">



    <TextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_number"
        android:textStyle="normal"
        android:textSize="21sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_number_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_otp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#808080"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_number"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_num"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_number_otp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_num"/>

    </com.google.android.material.textfield.TextInputLayout>
    
    <Button
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="NEXT"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias=".8"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_verify"
        android:textSize="17sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintVertical_bias=".92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>