<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".fragments.StatusFragment">


    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:layout_constraintVertical_bias=".35"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/tv_status"
        app:layout_constraintTop_toBottomOf="@id/tv_status">
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/roundedImageView"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rounded_image_bgnd"
            app:riv_oval="true"
            android:scaleType="centerCrop"/>

        <ImageView
            android:id="@+id/small_roundedImageView"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/baseline_add_24"
            android:background="@drawable/send_btn_bgnd"
            app:riv_oval="true"
            app:layout_constraintBottom_toBottomOf="@id/roundedImageView"
            app:layout_constraintEnd_toEndOf="@id/roundedImageView"
            android:scaleType="centerCrop"/>
        <TextView
            android:id="@+id/tv_my_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_status"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="@id/roundedImageView"
            app:layout_constraintStart_toEndOf="@id/roundedImageView" />

        <TextView
            android:id="@+id/tv_tap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap"
            android:textColor="#808080"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_my_status"
            app:layout_constraintStart_toStartOf="@id/tv_my_status" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="normal"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/cl_click"
        app:layout_constraintStart_toStartOf="@id/tv_status" />

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rv_status"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_update"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tv_update_viewed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_viewed"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="normal"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/rv_status"
        app:layout_constraintStart_toStartOf="@id/tv_status" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_status_viewed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_update_viewed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
